# Bishograd

./: .gitignore  .pre-commit-config.yaml  README.md  example.ipynb  pyproject.toml
examples/: xor_gate.ipynb
src/bishograd/: engine.py  nn.py
